30 March 2023 v524: Questionnaire results: Fixed: First column was often not visible on small screens.

--- a/main.css
+++ b/main.css
@@ -1601,6 +1601,7 @@ table.tableDragging td div {
 }
 
 #questionnaireBars > div:nth-child(2n-1) {
+  min-width: 80px;
   text-align: right;
   overflow: hidden;
 }
